modfication ToDoList (en cours)

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <h1>ToDoList</h1>
     <form id="InputForm">
         <input type="text" id="InputText" placeholder="Entrez votre tâche..." autocomplete="off">
-        <button type="submit">valider</button>
+        <button type="submit" id="btn_submit">valider</button>
     </form>
     <div class="list_tache_container">
         <h2>Vos Tâches:</h2>
         <ul class="list_tache">
-        </ul>
+        </ul> 
     </div>
 
     <!-- link JS -->
